--- a/src/index.css
+++ b/src/index.css
@@ -4,34 +4,70 @@
 
 body {
   background: url("https://www.faarmembers.com/wp-content/uploads/2019/01/trivia-background.jpg");
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
+
+.content {
+  padding: 25px 0;
+  background-color: rgba(255,228,196,.7);
+  border-radius: 50px;
+  width: 80vw;
+  margin: 0 auto;
 }
 
 .q-num {
-  margin: 5% 0;
   font-weight: bold;
-  font-size: large;
+  font-size: 2em;
 }
 
 .question {
   font-size: 1.25em;
-  padding: 5% 0;
-  margin: 0 5%;
+  padding: 20px;
+  margin: 5%;
   display: block;
-  text-decoration: underline;
-  background-color: rgba(255, 228, 196, .7);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 1.8em;
+  background-color: rgba(45, 145, 245, 0.85);
+  border-radius: 20px;
+}
+
+.next-container div {
+  display: inline;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  background-color: lightgreen;
 }
 
 .next-container, .correct-ans {
   margin-top: 50px;
   display: none;
   justify-content: center;
+  font-size: 1.2em;
 }
 
-.options-div {
-  justify-content: center;
-  display: inline;
+.options-group {
+  margin: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .option-btn {
-  margin-top: 20px;
+  background-color: rgba(45, 145, 245, 0.85);
+  font-size: 1.1em;
+  margin: 10px 0;
+  padding: 15px;
+  border-radius: 20px;
+  min-width: 150px;
+}
+
+.option-btn:hover {
+  cursor: pointer;
+  background-color: rgb(45, 145, 245);
 }
